--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -1,11 +1,14 @@
+.wrapper {
+}
+
 .icon {
+  display: inline-block;
+  vertical-align: bottom;
   fill: currentcolor;
   width: 1em;
   height: 1em;
 }
 
 .label {
-  display: inline;
-  vertical-align: 0.15em;
   margin-left: 0.25em;
 }
